Fix JavaScript typo.

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 						      </div>
 						      <div class="col-md-2">
 						        <img class="" src="img/javascript.png" alt="js logo">
-						        <p>Javascript</p>
+						        <p>JavaScript</p>
 						      </div>
 						      <div class="col-md-1">
 						      </div>
