--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </section>
 
 		<!-- Skills Section -->
-		<section id="skills" class="container content-section text-center">
+		<section id="skills" class="content-section text-center">
 				<div class="row">
 						<div class="col-lg-8 col-lg-offset-2">
 								<h2>Skills</h2>
@@ -189,7 +189,7 @@
 		</section>
 
     <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
+    <section id="contact" class="content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Drop me a line</h2>
