--- a/index.html
+++ b/index.html
@@ -56,11 +56,17 @@
                         <a class="page-scroll" href="#about">About Me</a>
                     </li>
                     <li>
+                      <a class="page-scroll" href="#experience">Experience</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#projects">Projects</a>
                     </li>
 										<li>
 											<a class="page-scroll" href="#skills">Skills</a>
 										</li>
+                    <li>
+                      <a class="page-scroll" href="https://docs.google.com/document/d/1rLbuDHWUhLoLtPaO_xGO98PuurwkE4c5MpZJvJh4_qA/edit?usp=sharing">Resumé</a>
+                    </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
@@ -99,6 +105,30 @@
             </div>
         </div>
     </section>
+
+    <!-- Experience Section -->
+    <section id="experience" class="content-section text-center">
+        <div class="experience-section">
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h2>Experience</h2>
+										<div class="project">
+											<h3>Web Development</h3>
+                      <p>For two years I built websites with <a href="http://binaryorganic.com">binary/organic</a> using all the standards -- HTML5, CSS3, Javascript, jQuery -- not to mention Wordpress customizations with PHP, and back-ends and email services built with SaaS products including Stripe, Mailchimp, Mandrill, and Firebase.
+	                    <p>I love to make good designs come to life.</p>
+										</div>
+										<div class="project">
+											<h3>Creative Coding</h3>
+	                    <p>I code for fun and art, too. I've written software in Max/MSP, Puredata, Processing/P5.js, ffmpeg, Python, and even BASIC.</p>
+                      <p>I've made an iPad react to its compass direction, used tree algorithms to animate theatre productions, made music with Markov chains, even made a rocking chair rock on its own.</p>
+                      <p>I've learned <a href="http://learnrubythehardway.org">Ruby</a> and <a href="http://learnpythonthehardway.org">Python the Hard Way</a>, <a href="http://www.amazon.com/gp/product/0321965515/ref=pd_lpo_sbs_dp_ss_1?pf_rd_p=1944687762&pf_rd_s=lpo-top-stripe-1&pf_rd_t=201&pf_rd_i=0321344758&pf_rd_m=ATVPDKIKX0DER&pf_rd_r=132J52KV0MF0V7GMEQH6">Won't Make You Think</a>, and know <a href="http://effectivejs.com/">Javascript Effectively</a>.
+										</div>
+	            </div>
+	        </div>
+			</div>
+    </section>
+
+
 
     <!-- Projects Section -->
     <section id="projects" class="content-section text-center">
@@ -202,6 +232,9 @@
                     </li>
                     <li>
                         <a href="https://www.linkedin.com/in/scottmries" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">LinkedIn</span></a>
+                    </li>
+                    <li>
+                      <a class="btn btn-default btn-lg" href="https://docs.google.com/document/d/1rLbuDHWUhLoLtPaO_xGO98PuurwkE4c5MpZJvJh4_qA/edit?usp=sharing"><i class="fa fa-file-text" aria-hidden="true"></i> <span class="network-name">Resumé</span></a>
                     </li>
                 </ul>
             </div>
