--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
 										<div class="project">
 											<h3>Web Development</h3>
                       <p>For two years I built websites with <a href="http://binaryorganic.com">binary/organic</a> using all the standards -- HTML5, CSS3, Javascript, jQuery -- not to mention Wordpress customizations with PHP, and back-ends and email services built with SaaS products including Stripe, Mailchimp, Mandrill, and Firebase.
-	                    <p>I love to make good designs come to life.</p>
+                      <p>Recently I've built
+                      <p>I love to make good designs come to life.</p>
 										</div>
 										<div class="project">
 											<h3>Creative Coding</h3>
@@ -146,10 +147,10 @@
 	                    <p>Slang compendium with a React/Flux frontend and a Rails backend</p>
 	                    <a href="http://urbane-dictionary.net"><img src="img/urbane-dictionary.png" /></a>
 										</div>
-											<h3>Chess</h3>
+											<h3>Oblique Strategies</h3>
 										<div class="project">
-	                    <p>Terminal game for two players</p>
-	                    <a href="http://github.com/scottmries/chess"><img src="img/chess.png" /></a>
+	                    <p>iOS implementation of <a href="http://stoney.sb.org/eno/oblique.html">Oblique Strategies</a> using React Native</p>
+	                    <a href="http://github.com/scottmries/ObliqueStrategies"><img src="img/ObliqueStrategies.png" /></a>
 	                </div>
 	            </div>
 	        </div>
@@ -192,7 +193,7 @@
 						      </div>
 						      <div class="col-md-2">
 						        <img class="" src="img/react.png" alt="react logo">
-						        <p>React</p>
+						        <p>ReactJS</p>
 						      </div>
 
 						      <div class="col-md-2">
