Fix recently built line.

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 										<div class="project">
 											<h3>Web Development</h3>
                       <p>For two years I built websites with <a href="http://binaryorganic.com">binary/organic</a> using all the standards -- HTML5, CSS3, Javascript, jQuery -- not to mention Wordpress customizations with PHP, and back-ends and email services built with SaaS products including Stripe, Mailchimp, Mandrill, and Firebase.
-                      <p>Recently I've built
+                      <p>Recently I've built an Oblique Strategies deck for iOS and a browser synthesizer using React. Check them out in my <a href="#projects">Projects</a>!</p>
                       <p>I love to make good designs come to life.</p>
 										</div>
 										<div class="project">
