Change ReactJS to React

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 						      </div>
 						      <div class="col-md-2">
 						        <img class="" src="img/react.png" alt="react logo">
-						        <p>ReactJS</p>
+						        <p>React</p>
 						      </div>
 
 						      <div class="col-md-2">
