Update resume link

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 											<a class="page-scroll" href="#skills">Skills</a>
 										</li>
                     <li>
-                      <a class="page-scroll" href="https://docs.google.com/document/d/1rLbuDHWUhLoLtPaO_xGO98PuurwkE4c5MpZJvJh4_qA/edit?usp=sharing">Resumé</a>
+                      <a class="page-scroll" href="http://scottmries.com/resume%CC%81.pdf">Resumé</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -235,7 +235,7 @@
                         <a href="https://www.linkedin.com/in/scottmries" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">LinkedIn</span></a>
                     </li>
                     <li>
-                      <a class="btn btn-default btn-lg" href="https://docs.google.com/document/d/1rLbuDHWUhLoLtPaO_xGO98PuurwkE4c5MpZJvJh4_qA/edit?usp=sharing"><i class="fa fa-file-text" aria-hidden="true"></i> <span class="network-name">Resumé</span></a>
+                      <a class="btn btn-default btn-lg" href="http://scottmries.com/resume%CC%81.pdf"><i class="fa fa-file-text" aria-hidden="true"></i> <span class="network-name">Resumé</span></a>
                     </li>
                 </ul>
             </div>
