--- a/index.html
+++ b/index.html
@@ -181,16 +181,17 @@
 						        <img class="" src="img/css.png" alt="css logo">
 						        <p>CSS3</p>
 						      </div>
+                  <div class="col-md-1">
+						      </div>
+						    </div>
+						    <div class="row">
+                  <div class="col-md-1">
+                  </div>
 						      <div class="col-md-2">
 						        <img class="" src="img/javascript.png" alt="js logo">
 						        <p>JavaScript</p>
 						      </div>
-						      <div class="col-md-1">
-						      </div>
-						    </div>
-						    <div class="row">
-						      <div class="col-md-1">
-						      </div>
+
 						      <div class="col-md-2">
 						        <img class="" src="img/react.png" alt="react logo">
 						        <p>React</p>
@@ -204,6 +205,20 @@
 						        <img class="" src="img/postgresql.png" alt="psql logo">
 						        <p>PostgreSQL</p>
 						      </div>
+                  <div class="col-md-1">
+						      </div>
+						    </div>
+						    <div class="row">
+                  <div class="col-md-1">
+                  </div>
+                  <div class="col-md-2">
+										<img class="" src="img/webaudio.png" alt="webaudio logo">
+										<p>WebAudio API</p>
+									</div>
+                  <div class="col-md-2">
+										<img class="" src="img/webpack.svg" alt="webpack logo">
+										<p>Webpack</p>
+									</div>
 									<div class="col-md-2">
 						        <img class="" src="img/pure-data.png" alt="pure-data logo">
 						        <p>Pure Data</p>
@@ -212,6 +227,7 @@
 										<img class="" src="img/processing.png" alt="processing logo">
 										<p>Processing</p>
 									</div>
+
 						      <div class="col-md-1">
 						      </div>
 						    </div>
