Add Cinder to skills

--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
 										<p>WebAudio</p>
 									</div>
                   <div class="col-md-2">
-										<img class="" src="img/webpack.svg" alt="webpack logo">
-										<p>Webpack</p>
+										<img class="" src="img/cinder.png" alt="cinder logo">
+										<p>Cinder</p>
 									</div>
 									<div class="col-md-2">
 						        <img class="" src="img/pure-data.png" alt="pure-data logo">
