Fix cinder logo link

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 										<p>WebAudio</p>
 									</div>
                   <div class="col-md-2">
-										<img class="" src="img/cinder.png" alt="cinder logo">
+										<img class="" src="img/cinder-logo.png" alt="cinder logo">
 										<p>Cinder</p>
 									</div>
 									<div class="col-md-2">
