Add an ellipsis.

--- a/oopTrees/index.html
+++ b/oopTrees/index.html
@@ -41,7 +41,7 @@
   </head>
   <body>
       <div id="treesCanvas" class="animating transparent"></div>
-      <p class="generating animating">making a landscape<span class="ellipsis"></span></p>
+      <p class="generating animating">making a landscape...<span class="ellipsis"></span></p>
   </body>
   <script src="libraries/p5.js" type="text/javascript"></script>
 
