--- a/oopTrees/index.html
+++ b/oopTrees/index.html
@@ -63,7 +63,7 @@
   <script src="libraries/p5.js" type="text/javascript"></script>
 
   <script src="libraries/p5.dom.js" type="text/javascript"></script>
-  <script src="libraries/p5.sound.js" type="text/javascript"></script>
+  <!-- <script src="libraries/p5.sound.js" type="text/javascript"></script> -->
 
   <script src="light.js" type="text/javascript"></script>
   <script src="branch.js" type="text/javascript"></script>
