--- a/oopTrees/index.html
+++ b/oopTrees/index.html
@@ -61,7 +61,7 @@
 <meta name="msapplication-TileImage" content="assets/favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 
-    <script src="js/microphone.js" type="text/javascript"></script>
+    <!-- <script src="js/microphone.js" type="text/javascript"></script> -->
   <script src="libraries/p5.js" type="text/javascript"></script>
   <script src="libraries/p5.dom.js" type="text/javascript"></script>
   <script src="libraries/p5.sound.js" type="text/javascript"></script>
