--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                         <h3>Web Development</h3>
                         <p>For more than a year I built websites with
                             <a href="http://familiar.studio">Familiar Studio</a>, a shop that produces complex designs, rich UXs, and robust client services.</p>
-                        <p>I frequently used HTML/CSS/JS, VueJS (with Nuxt), PHP, Gulp, Git, Node.js, and Webpack.</p>
-                        <p>While Craft CMS was our primary CMS, I was also the go-to dev for Wordpress.</p>
+                        <p>I frequently used HTML/CSS/JS, VueJS (with Nuxt), PHP, Gulp, Git, Node, and Webpack.</p>
+                        <p>While Craft was our primary CMS, I was also the go-to dev for Wordpress.</p>
                         <p>I also got to play with all kinds of other bits of code, ask me about them!</p>
                         <p>Previously I spent two years at a tiny (two-person!) company called
                             <a href="http://binaryorganic.com">binary/organic</a>, creating websites and services with Stripe and Mailchimp, among others.</p>
